# Graph-Six-Degrees-of-Kevin-Bacon

data/: my_out_paths_unweighted.tsv  my_small_sample.tsv  my_test_actors.tsv  newpredict1.tsv  newpredict2.tsv  out_test.tsv  predict1.tsv  predict2.tsv  small_test_out_path.tsv  small_test_pairs.tsv
src/: buildGraph.cpp  linkpredictor.cpp  meson.build  movietraveler.cpp  pathfinder.cpp
src/ActorGraph/: ActorGraph.cpp  ActorGraph.hpp  meson.build
src/elements/: meson.build
src/elements/Edges/: Edges.cpp  Edges.hpp  meson.build
src/elements/Movie/: Movie.cpp  Movie.hpp  meson.build
src/elements/Node/: Node.cpp  Node.hpp  meson.build
test/: meson.build
